# Homework-Web-02

./: .gitignore  Dockerfile  README.md  classes.py  constants.py  main.py  notes.py  pyproject.toml  requirements.txt  setup.cfg  sort_path.py  test_classes.py  test_functions.py  test_note.py  test_sorting.py
chatbot/: classes.py  get_birthday_on_date.py  main.py  notes.py  sort_path.py
