[metadata]
name = chatbot
version = 0.1.3
description = "A chat bot that helps you manage your contacts, notes adnd sort files in folders."
author = "K-9 Team"
author_email="k9@example.com"
license="MIT"

[options.entry_points]
console_scripts = chatbot = chatbot.main:main

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    prompt-toolkit>=3.0.41
    wcwidth>=0.2.10
